# asset-management

./: .gitignore  .pre-commit-config.yaml
backend/project/asset_management/: README.md  pyproject.toml
backend/project/asset_management/asset_management/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
backend/project/asset_management/asset_management_app/: __init__.py  admin.py  apps.py  middleware.py  urls.py
backend/project/asset_management/asset_management_app/enums/: __init__.py
backend/project/asset_management/asset_management_app/enums/assets/: __init__.py  asset_status.py  warranty_type.py
backend/project/asset_management/asset_management_app/enums/employees/: __init__.py  employ_status_enum.py  employ_type_enum.py
backend/project/asset_management/asset_management_app/enums/users/: __init__.py  user_status_enum.py  user_type_enum.py
backend/project/asset_management/asset_management_app/migrations/: 0001_initial.py  0002_assets.py  0002_remove_assets_warranty_assets_warranty_end_date_and_more.py  0003_category_vendors_warranty_subcategory_and_more.py  0003_employees_name.py  0004_alter_employees_emp_id_alter_employees_status_and_more.py
backend/project/asset_management/asset_management_app/models/: __init__.py  organization.py  users.py
backend/project/asset_management/asset_management_app/models/Asset/: __init__.py  assets.py  category.py  subcategory.py  vendors.py  warranty.py
backend/project/asset_management/asset_management_app/models/Assets/: __init__.py  assets.py  category.py  subcategory.py  vendors.py  warranty.py
(+42 files in other folders)
