[tool.poetry]
name = "asset-management"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"
packages = [{include = "asset_management"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
